--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - name: my-step
         uses: actions/checkout@v2
+      - name: first   
         run: chmod +x ci/build-app.sh && ci/build-app.sh
 
   Build:
