--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,14 +9,22 @@ jobs:
         uses: actions/checkout@v2
       - name: first   
         run: chmod +x ci/build-app.sh && ci/build-app.sh
+      - name: upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: code
+          path: .
 
   Build:
     runs-on: ubuntu:latest
     needs: [Clone-Down]
     container: gradle:6-jdk11
     steps:
-      - name: build-step
-        uses: actions/upload-artifact@v2
+      - name: download-step
+        uses: actions/download-artifact@v2
+        with:
+          name: code
+          path: .
       - name: test run  
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       
