--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -3,28 +3,30 @@ on: push
 jobs:
   Clone-down:
     runs-on: ubuntu-latest
-    container: gradle:6-jdk11
     steps:
-      - name: my-step
+      - name: Clone
         uses: actions/checkout@v2
-      - name: first   
-        run: chmod +x ci/build-app.sh && ci/build-app.sh
-      - name: upload build
+      - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: code
           path: .
-
   Build:
-    runs-on: ubuntu:latest
-    needs: [Clone-Down]
+    runs-on: ubuntu-latest
     container: gradle:6-jdk11
+    needs: [Clone-down]
     steps:
-      - name: download-step
+      - name: Download
         uses: actions/download-artifact@v2
         with:
           name: code
           path: .
-      - name: test run  
+      - name: build
+        run: chmod +x ci/build-app.sh && ci/build-app.sh
+      - name: test
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
-      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code
+          path: .
