--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,5 +1,9 @@
 name: JAVA CI
 on: push
+env:
+  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  docker_password: ${{ secrets.DOCKER_PASSWORD }}
+  git_commit: ${{ github.sha }}
 jobs:
   Clone-down:
     runs-on: ubuntu-latest
@@ -26,7 +30,26 @@ jobs:
       - name: test
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2  
+        with: 
+          name: build
+          path: app/build/libs/app-0.1-all.jar
+      - name: Upload all
+        uses: actions/upload-artifact@v2 
+        with:
+          name: code
+          path: .  
+  
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    steps:
+      - name: download
+        uses: actions/download-artifact@v2
         with:
           name: code
           path: .
+      - name: build-docker
+        
+
+          
