--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,7 +1,7 @@
 name: JAVA CI
 on: push
 env:
-  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  docker_username: ${{ secrets.USERNAME }}
   docker_password: ${{ secrets.DOCKERKEY }}
   git_commit: ${{ github.sha }}
 jobs:
