--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -53,6 +53,29 @@ jobs:
         run: chmod +x ci/build-docker.sh && ci/build-docker.sh
       - name: push docker
         run: chmod +x ci/push-docker.sh && ci/push-docker.sh
-        
+  
+  Component-test:
+    runs-on: ubuntu-latest
+    needs: [Docker-image]
+    steps:
+      - name: download
+        uses: actions/download-artifact@v2
+        with:
+          name: code
+          path: .
+      - name: Execute component test
+        run: chmod +x ci/component-test.sh && ci/component-test.sh
+
+  Performance-test:
+    runs-on: ubuntu-latest
+    needs: [Docker-image]
+    steps:
+      - name: download
+        uses: actions/download-artifact@v2
+        with:
+          name: code
+          path: .
+      - name: Execute component test
+        run: chmod +x ci/performance-test.sh && ci/performance-test.sh
 
           
