--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,5 +1,9 @@
 name: JAVA CI
-on: push
+on: 
+  pull_request:
+    branches:
+      - main
+  
 env:
   docker_username: ${{ secrets.USERNAME }}
   docker_password: ${{ secrets.DOCKERKEY }}
