--- a/.github/workflows/dev-workflow.yaml
+++ b/.github/workflows/dev-workflow.yaml
@@ -1,8 +1,8 @@
 name: JAVA CI
-on: 
-  pull_request:
+on:
+  push:
     branches:
-      - main
+      - "dev/**"
   
 env:
   docker_username: ${{ secrets.USERNAME }}
@@ -55,20 +55,7 @@ jobs:
           path: .
       - name: build docker
         run: chmod +x ci/build-docker.sh && ci/build-docker.sh
-      - name: push docker
-        run: chmod +x ci/push-docker.sh && ci/push-docker.sh
   
-  Component-test:
-    runs-on: ubuntu-latest
-    needs: [Docker-image]
-    steps:
-      - name: download
-        uses: actions/download-artifact@v2
-        with:
-          name: code
-          path: .
-      - name: Execute component test
-        run: chmod +x ci/component-test.sh && ci/component-test.sh
 
   Performance-test:
     runs-on: ubuntu-latest
