--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -59,7 +59,7 @@ jobs:
         run: chmod +x ci/push-docker.sh && ci/push-docker.sh
   
   Component-test:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     needs: [Docker-image]
     steps:
       - name: download
